--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link {% if view_name  == 'users:logout' %}active disabled{% endif %}" href={% url 'users:logout' %}>Выйти</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link {% if view_name  == 'users:pcf' %}active disabled{% endif %}" href={% url 'users:pcf' %}>Изменить пароль</a>
+        </li>
         {% endif %}
         {% if not name %}
         <li class="nav-item">
@@ -44,7 +47,6 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               {% if name %}
               <a class="dropdown-item" href={% url 'users:send_mail' %}>Отправить письмо</a>
-              <a class="dropdown-item" href={% url 'users:pcf' %}>Изменить пароль</a>
               {% endif %}
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Что-то еще</a>
