--- a/yatube/templates/users/password_reset_form.html
+++ b/yatube/templates/users/password_reset_form.html
@@ -9,7 +9,7 @@
             Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались
           </div>
           <div class="card-body"> 
-            <form method="post" action={% url 'users:prf' %}>
+            <form method="post" action={% url 'users:password_reset_form' %}>
                 {% csrf_token %}
               {% comment %} <input type="hidden" name="csrfmiddlewaretoken" value=""> {% endcomment %}
               <div class="form-group row my-3 p-3">
